# carla

./: .bazelignore  .bazelrc  .clangd.in  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .readthedocs.yaml  .readthedocs.yml  .travis.yml  BUILD  CARLA.sublime-project  CHANGELOG.md  CHANGELOG_UE4.md  CMakeLists.txt  CMakePresets.json  Carla.uplugin  CarlaSetup.bat  CarlaSetup.sh  Configure.py  CreateDebian.sh  Dockerfile  Documentation.docx  Doxyfile  Jenkinsfile  Jenkinsfile_new  LICENSE  Launch.sh  Makefile  Package.sh  README.md  Racetrack01.umap  Rebuild.bat  Rebuild.sh  Setup.bat  Setup.cmd  Setup.py  Setup.sh  (+20 more)
Examples/: BUILD  CMakeLists.txt
Examples/CppClient/: .gitignore  CMakeLists.txt  Makefile  README.md  ToolChain.cmake  benchmark_max_fps.cpp  main.cpp
Examples/CppClientsCmake/: README.md
LibCarla/: .clang-format  CMakeLists.txt
LibCarla/cmake/: CMakeLists.txt
LibCarla/source/: BUILD
PythonAPI/: .gitignore  .pylintrc  BUILD  CMakeLists.txt  MANIFEST.in  automatic_control.py  change_map  client_bounding_boxes.py  client_boundingboxes.py  collisions.csv  dynamic_weather.py  example.py  generate_map.py  invasions.csv  lane_explorer.py  manual_control.py  manual_control_steeringwheel.py  myReplayerTest.py  no_rendering_mode.py  performance_benchmark.py  requirements.txt  scene_layout.py  set_replayer_speed.py  setup-old.py  setup.py  show_recorder_actors_blocked.py  show_recorder_collisions.py  show_recorder_file_info.py  spawn_npc.py  start_recording.py  start_replaying.py  synchronous_mode.py  tutorial.py  vehicle_gallery.py
PythonAPI/CarDetection/: car_detection_playground.ipynb  detect_cars.py  playground_JP.ipynb  playground_Lukas.ipynb  utils.py
PythonAPI/Navigation/: controller.py  local_planner.py  roaming_agent.py
PythonAPI/SensorDataCollection/: car_detection_playground.ipynb  detect_cars.py  playground_Lukas.ipynb  playground_highway copy.ipynb  readme.md  utils.py
PythonAPI/SensorRegistration/: collect_data.py  order_of_calls.txt  test_script_01.py  test_script_02.py  test_script_04.py  test_sensors_data.py  test_sensors_data_02.py
PythonAPI/agents/: .gitignore  README.md  requirements.txt  setup.py
PythonAPI/attack_scenario/: .gitignore  detector_model.py  get_walker_spawn_points.py  pedestrian_spawn_points.csv  test_statistics.md
PythonAPI/carla/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  MANIFEST.in.in  README.md  __init__.py  generate_type_hints.py  pyproject.toml.in  requirements.txt  scene_layout.py  setup.py  setup.py.in  setup.py.txt
PythonAPI/carla-python-extension/: CMakeLists.txt
PythonAPI/challenge/: MyAgent.py  autonomous_agent.py  data_provider.py  evaluate_agent.py  scenario_setup.py  server_manager.py
PythonAPI/collect_train_imgs/: .gitignore  collect_data.py
PythonAPI/docs/: actor.yml  blueprint.yml  bp_doc_gen.py  client.yml  commands.yml  control.yml  doc_gen.py  doc_gen_snipets.py  geom.yml  light_manager.yml  map.yml  osm2odr.yml  sensor.yml  sensor_data.yml  snapshot.yml  weather.yml  world.yml
PythonAPI/examples/: .gitignore  CARLA-LICENSE  CarlaEnv.py  HOG_functions.py  Pipfile  Untitled1.ipynb  V2XDemo.py  action_converter.py  automatic_car_screenshots.py  automatic_control.py  benchmark.py  bp_doc_gen.py  carla_wrappers.py  check_bb_tags.py  class_A.py  class_A.py.bak  class_B.py  clf.p  client_bounding_boxes.py  config.py  control_vehicle.py  create_walker.py  doterop_radar_test.py  draw_path.py  draw_skeleton.py  dynamic_weather.py  env.py  following_spectator.py  friction_control.py  generate_traffic.py  get_bb_from_seg.py  get_bounding_boxes.py  get_component_test.py  import_test.py  interpolate_camera.py  interpolation.xml  invertedai_traffic.py  lane_explorer.py  lidar_to_camera.py  lidar_tutorial.py  (+73 more)
PythonAPI/py36.conda.recipe/: build.sh  meta.yaml
PythonAPI/test/: BUILD  __init__.py  integration_tests_list.txt  requirements.txt  smoke_test_list.txt  test_client.py  test_connection.py  test_raycast_sensor.py  test_transform.py  test_vehicle.py  test_vehicle_physics.py
PythonAPI/util/: Environment.py  Pipfile  apply_texture.py  automatic_car_screenshots.py  benchmark_max_fps.py  change_map_layer.py  check_bb_tags.py  check_collisions_substepping.py  check_lidar_bb.py  check_map.py  check_raycast_sensors_determinism.py  config.py  environment.py  extract_spawn_points.py  generate_map.py  get_fps.py  lane_explorer.py  load_bb_database.py  load_osm_map.py  manage_environment_objects.py  manage_lights.py  manage_traffic_light.py  map_viewer.py  opendrive_fixer.py  osm2xodr.py  osm_to_xodr.py  performance_benchmark.py  performance_queries.json  profile.py  raycast_sensor_testing.py  recorder_comparer.py  requirements.txt  scene_layout.py  show_crosswalks.py  show_junctions.py  show_recorder_file_info.py  show_spawn_points.py  show_topology.py  show_traffic_lights.py  showcase_doors.py  (+10 more)
Ros2Native/LibCarlaRos2Native/: CMakeLists.txt  CMakeLists.txt.in
Source/CarlaServer/: .gitignore  CMakeLists.txt  Makefile  README.md
TrafficManager/: CMakeLists.txt  README.md
TrafficManager/include/: BatchControlCallable.h  BufferMap.h  CarlaDataAccessLayer.h  CollisionCallable.h  CreateGrid.h  FeederCallable.h  InMemoryMap.h  LocalizationCallable.h  MotionPlannerCallable.h  PIDController.h  Pipeline.h  PipelineCallable.h  PipelineMessage.h  PipelineStage.h  SharedData.h  SimpleWaypoint.h  SyncQueue.h  TrafficDistributor.h
TrafficManager/integration/: PipeLineExecutable.cpp  Test.cpp
TrafficManager/source/: CarlaDataAccessLayer.cpp  CollisionCallable.cpp  CreateGrid.cpp  CreateGrid.h  FeederCallable.cpp  InMemoryMap.cpp  LocalizationCallable.cpp  LocalizationStage.cpp  LocalizationStage.h  Messenger.h  MessengerAndDataTypes.h  MotionPlannerCallable.cpp  MotionPlannerStage.cpp  MotionPlannerStage.h  PIDController.cpp  PIDController.h  Pipeline.cpp  PipelineCallable.cpp  PipelineMessage.cpp  PipelineStage.h  (+9 more)
Unreal/: CMakeLists.txt  Dockerfile  build_carla.sh  build_container.sh  build_inside_container.sh
osm-world-renderer/: .gitignore  CMakeLists.txt  Run.sh
(+31952 files in other folders)
